# watchtower

./: .gitignore  .mcp.json  Cargo.toml  README.md  build.rs  justfile
protocol/: Cargo.toml
protocol/src/: lib.rs
site/: .gitignore  Cargo.toml  index.html  package.json  tailwind.config.js
site/public/: styles.css
site/src/: chat.rs  lib.rs  main.rs  message.rs  state.rs  test_tab.rs  tool_use.rs  toolbar.rs
src/: cli.rs  game.rs  history.rs  main.rs  mcp_server.rs  scene.rs
