[workspace]
resolver = "2"
members = [".", "site", "protocol"]

[package]
name = "watchtower"
version = "0.1.0"
authors = ["Matthew Berger <matthewjordanberger@gmail.com>"]
description = "Desktop frontend for Claude Code"
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.90"
publish = false

[[bin]]
name = "watchtower"
path = "src/main.rs"

[dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
nightshade = { git = "https://github.com/matthewjberger/nightshade.git", default-features = false, features = [
    "runtime",
    "wgpu",
    "egui",
    "webview",
] }
include_dir = "0.7"
watchtower-protocol = { path = "protocol" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
rmcp = { version = "0.2", features = ["server", "transport-sse-server", "transport-streamable-http-server"] }
axum = { version = "0.8", features = ["macros"] }
schemars = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "signal"] }
rfd = "0.17"
ureq = "2"

[build-dependencies]

[patch."https://github.com/matthewjberger/nightshade.git"]
nightshade = { path = "../nightshade/crates/nightshade" }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
